--- a/Android/omxRemote-android/res/layout/activity_settings.xml
+++ b/Android/omxRemote-android/res/layout/activity_settings.xml
@@ -30,8 +30,7 @@
         android:layout_marginTop="23dp"
         android:background="@color/White"
         android:ems="10"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="192.168.1.132" >
+        android:gravity="center_vertical|center_horizontal" >
 
         <requestFocus />
     </EditText>
@@ -47,17 +46,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/White" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/port"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:onClick="save"
-        android:text="Save"
-        android:textColor="@color/White" />
-
     <EditText
         android:id="@+id/port"
         android:layout_width="wrap_content"
@@ -67,7 +55,40 @@
         android:layout_marginTop="25dp"
         android:background="@color/White"
         android:ems="10"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="1337" />
+        android:gravity="center_vertical|center_horizontal" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/port"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="26dp"
+        android:text="Folder"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/White"
+        android:textColorHint="@color/White" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="58dp"
+        android:onClick="save"
+        android:text="Save"
+        android:textColor="@color/White" />
+
+    <EditText
+        android:id="@+id/folder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/port"
+        android:layout_below="@+id/textView3"
+        android:layout_marginTop="17dp"
+        android:background="@color/White"
+        android:ems="10"
+        android:gravity="center_vertical|center_horizontal" />
 
 </RelativeLayout>
