--- a/Android/omxRemote-android/res/layout/activity_filemanager.xml
+++ b/Android/omxRemote-android/res/layout/activity_filemanager.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="@color/White" >
+        android:background="@color/White"
+        android:fastScrollEnabled="true" >
 
     </ListView>
 
